<resources>
    <string name="app_name">Hali</string>
    <string name="where">Where to?</string>
    <string name="now">Now</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="number">Enter mobile number</string>
    <string name="prompt_password">Password</string>
    <string name="otp">Otp</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="next">"Next"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>