<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="view_model"
            type="com.example.moduletwo.modelclass.Moduletwo_viewmodel" />
    </data>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Hali_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_20sdp">

    <TextView
        android:id="@+id/hali_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/alien2"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp" />

    <LinearLayout
        android:id="@+id/number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/hali_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:hint="@string/number"
            android:inputType="number"
            android:maxLength="10"
            android:maxEms="4"/>

        <Button
            android:id="@+id/hali_next"
            android:layout_margin="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:backgroundTint="@color/black"
            android:text="@string/next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/hali_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/otp"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="number" />


        <Button
            android:id="@+id/hali_login"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/action_sign_in_short" />

    </LinearLayout>





    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
    </LinearLayout>

</LinearLayout>

</layout>